Changed service and container name.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
-  mediafire-app:
-    container_name: media-fire
+  ez-mediafire:
+    container_name: ez-mediafire-dl
     build: .
     stdin_open: true # docker run -i
     tty: true        # docker run -t
